completed the hero-section

--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
     
+    <header>
+        <section class="hero-section">
+            <div class="hero-texts">
+                <h1 class="hero-title">Let's make<br>Beautiful flowers<br>A part of your life.</h1>
+                <p class="hero-description">Bringing joy and color to your everyday moments. Embrace their vibrant beauty to brighten your home and uplift your spirits. Experience the tranquility and happiness that only flowers can provide.</p>
+                <a href=""><button class="primary-button">Shop Now</button></a>
+            </div>
+            <div class="hero-image">
+                <img src="images/pngwing 6.png" alt="">
+            </div>
+        </section>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+
 </body>
 </html>
