--- a/index.html
+++ b/index.html
@@ -17,12 +17,44 @@
                 <a href=""><button class="primary-button">Shop Now</button></a>
             </div>
             <div class="hero-image">
-                <img src="images/pngwing 6.png" alt="">
+                <img src="images/pngwing 10.png" alt="">
             </div>
         </section>
     </header>
 
-    <main></main>
+    <main>
+
+        <section class="featured-section">
+            <div class="featured-texts">
+                <h2 class="section-title">Our Featured Flowers</h2>
+                <p class="section-description">Our featured flowers showcase a vibrant array of colors and fragrances, bringing the beauty of nature right to your doorstep.<br>Each bloom is handpicked for its elegance and charm, perfect for any occasion.</p>
+            </div>
+
+            <div class="flowers-container">
+                <div class="flower1">
+                    <div>
+                        <div class="flower-image"><img src="images/pngwing 6.png" alt=""></div>
+                        <div class="see-more"><a href="">See More</a></div> 
+                    </div>       
+                </div>
+                
+                <div class="flower2">
+                    <div>
+                        <div class="flower-image"><img src="images/pngwing 5.png" alt=""></div>
+                        <div class="see-more"><a href="">See More</a></div> 
+                    </div>
+                </div>
+
+                <div class="flower3">
+                    <div>
+                        <div class="flower-image"><img src="images/pngwing 7.png" alt=""></div>
+                        <div class="see-more"><a href="">See More</a></div> 
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
 
     <footer></footer>
 
