completed the services section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,23 @@
             </div>
         </section>
 
+        <section class="services-section">
+            <div class="service-container">
+                <div class="service">
+                    <div class="service-image"><img src="images/Group 57.png" alt=""></div>  
+                    <div class="service-name"><h4>Same Day Delivery</h4></div>
+                </div>
+                <div class="service">
+                    <div class="service-image"><img src="images/Group 58.png" alt=""></div>  
+                    <div class="service-name"><h4>Local Growers.</h4></div>
+                </div>
+                <div class="service">
+                    <div class="service-image"><img src="images/Group 59.png" alt=""></div>  
+                    <div class="service-name"><h4>24/7 Free Support.</h4></div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
