completed the deal section

--- a/index.html
+++ b/index.html
@@ -71,6 +71,19 @@
             </div>
         </section>
 
+
+        <section class="deal-section">
+            <div class="deal-texts">
+                <h2 class="section-title">Hot Deal! Sale Up To 25% Off</h2>
+                <p class="deal-description section-description">From roses to lilies, brighten your day with our discounted blooms. Shop now and save!</p>
+                <a href=""><button class="primary-button">Sign Up</button></a>
+            </div>
+            
+            <div class="deal-image">
+                <img src="images/pngwing 8.png" alt="">
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
