completed the instagram section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
             </div>
         </section>
 
+        <section class="insta-section">
+            <div class="insta-texts">
+                <h2 class="section-title">Instagram</h2>
+                <p class="section-description">Discover our stunning flower collection on Instagram. Follow us for daily floral inspiration and exclusive behind-the-scenes looks. Check out our latest blooms and arrangements today!</p>
+            </div>
+
+            <div class="flower-gallery">
+                <div class="flower-photo"><img src="images/Flower 01.png" alt=""></div>
+                <div class="flower-photo"><img src="images/Rectangle 4.png" alt=""></div>
+                <div class="flower-photo"><img src="images/Rectangle 5.png" alt=""></div>
+                <div class="flower-photo"><img src="images/Rectangle 6.png" alt=""></div>
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
