--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
             </div>
         </section>
 
+        <section class="latest-deals-section">
+            <div class="latest-deals-texts">
+                <h2 class="section-title latest-deals-title">Get The Latest Deals</h2>
+                <p class="section-description latest-deals-description">$30 coupon for first shopping</p>
+            </div>
+
+            <div class="latest-deals-form">
+                <input class="email-field" type="email" name="email" id="email" placeholder="Enter your email here...">
+                <input class="primary-button" type="button" value="Subscribe">
+            </div>
+        </section>
+
     </main>
 
     <footer></footer>
