--- a/index.html
+++ b/index.html
@@ -112,7 +112,15 @@
 
     </main>
 
-    <footer></footer>
+    <footer>
+        <section class="footer-section">
+            <div class="footer-texts">
+                <h2 class="footer-title"><span id="flower">Flower</span>Shop</h2>
+                <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p class="copyright">@2024, OnlineFlowerShop.com. All rights reserved. </p>
+            </div>
+        </section>
+    </footer>
 
 </body>
 </html>
