--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
         <section class="insta-section">
             <div class="insta-texts">
-                <h2 class="section-title">Instagram</h2>
+                <h2 class="section-title insta-title">Instagram</h2>
                 <p class="section-description insta-description">Discover our stunning flower collection on Instagram. Follow us for daily floral inspiration and exclusive behind-the-scenes looks. Check out our latest blooms and arrangements today!</p>
             </div>
 
